load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ksplit_lib",
    srcs = ["main.go"],
    importpath = "github.com/z5labs/helm/tools/ksplit",
    visibility = ["//visibility:public"],
    deps = ["//tools/ksplit/cmd"],
)

go_binary(
    name = "ksplit",
    embed = [":ksplit_lib"],
    visibility = ["//visibility:public"],
)
