load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "root.go",
    ],
    importpath = "github.com/z5labs/helm-knative/tools/ksplit/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/ksplit/kubeyaml",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
