load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kubeyaml",
    srcs = ["kubeyaml.go"],
    importpath = "github.com/z5labs/helm/tools/ksplit/kubeyaml",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_afero//:afero"],
)

go_test(
    name = "kubeyaml_test",
    srcs = ["kubeyaml_test.go"],
    embed = [":kubeyaml"],
    deps = [
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
    ],
)
